Fix dockerfile with recommendation service

--- a/packages/jobs/Dockerfile
+++ b/packages/jobs/Dockerfile
@@ -9,6 +9,7 @@ COPY packages/jobs/package*.json ./packages/jobs/
 COPY packages/server/package*.json ./packages/server/
 COPY packages/utils/package*.json ./packages/utils/
 COPY packages/client/package*.json ./packages/client/
+COPY packages/recommenderService/package*.json ./packages/recommenderService/
 
 # Install all dependencies (including dev dependencies for building)
 RUN npm install --workspaces --include-workspace-root
@@ -18,6 +19,7 @@ COPY packages/jobs ./packages/jobs
 COPY packages/server ./packages/server
 COPY packages/utils ./packages/utils
 COPY packages/client ./packages/client
+COPY packages/recommenderService ./packages/recommenderService
 
 # Build the projects (server -> jobs)
 RUN npm run build --workspace=packages/server
@@ -33,6 +35,7 @@ COPY package*.json ./
 COPY packages/jobs/package*.json ./packages/jobs/
 COPY packages/server/package*.json ./packages/server/
 COPY packages/utils/package*.json ./packages/utils/
+COPY packages/recommenderService/package*.json ./packages/recommenderService/
 
 # Install only production dependencies
 RUN npm install --workspaces --omit=dev --include-workspace-root
@@ -43,6 +46,9 @@ COPY --from=builder /app/packages/server/dist ./packages/server/dist
 
 # Copy utils source (not built, pure TypeScript)
 COPY --from=builder /app/packages/utils/src ./packages/utils/src
+
+# Copy recommenderService source (needed for ML utilities)
+COPY --from=builder /app/packages/recommenderService/src ./packages/recommenderService/src
 
 # Copy any additional runtime files needed
 COPY --from=builder /app/packages/jobs/tsconfig.json ./packages/jobs/
