--- a/packages/recommenderService/package.json
+++ b/packages/recommenderService/package.json
@@ -33,6 +33,7 @@
     "compression": "^1.8.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "forever-monitor": "^3.0.3",
     "module-alias": "^2.2.3",
     "response-time": "^2.3.4",
     "ts-node": "^10.9.2"
