--- a/packages/recommenderService/tsconfig.json
+++ b/packages/recommenderService/tsconfig.json
@@ -2,15 +2,15 @@
   "compilerOptions": {
     "types": ["node"],
     "typeRoots": ["node_modules/@types", "../../node_modules/@types", "src/types"],
-    "outDir": "dist",
+    "outDir": "dist/recommenderService",
     "esModuleInterop": true,
     "target": "ES2020",
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
-      "@utils/*": ["../utils/src/*"],
-      "mlutils/*": ["src/mlutils/*"],
-      "router/*": ["src/router/*"],
-      "types/*": ["src/types/*"]
+      "@utils/*": ["../../utils/src/*"],
+      "mlutils/*": ["mlutils/*"],
+      "router/*": ["router/*"],
+      "types/*": ["types/*"]
     },
     "module": "commonjs",
     "moduleResolution": "node",
