--- a/packages/recommenderService/tsconfig.json
+++ b/packages/recommenderService/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "types": ["node"],
     "typeRoots": ["node_modules/@types", "../../node_modules/@types", "src/types"],
-    "outDir": "dist/recommenderService",
+    "outDir": "dist",
+    "rootDir": "..",
     "esModuleInterop": true,
     "target": "ES2020",
     "baseUrl": "./src",
@@ -27,5 +28,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.js", "src/**/*.ts", "src", "../utils/src"]
+  "include": ["src/**/*.js", "src/**/*.ts", "../utils/src"]
 }
