Switch AddToCubeModal to take the Card object, not just details.
For custom cards, the pertinent information is in the Card.

--- a/packages/server/public/manifest.json
+++ b/packages/server/public/manifest.json
@@ -6,28 +6,29 @@
   "ArticlesPage": "/js/ArticlesPage.dfe5f07e.bundle.js",
   "BlogPostPage": "/js/BlogPostPage.266593ee.bundle.js",
   "BrowseContentPage": "/js/BrowseContentPage.b187d731.bundle.js",
-  "BulkUploadPage": "/js/BulkUploadPage.e4949de5.bundle.js",
-  "CardPage": "/js/CardPage.e33dd88e.bundle.js",
+  "BulkUploadPage": "/js/BulkUploadPage.769ac86b.bundle.js",
+  "CardPage": "/js/CardPage.d3753931.bundle.js",
   "CardSearchPage": "/js/CardSearchPage.0d9fa32a.bundle.js",
   "CardUpdatesPage": "/js/CardUpdatesPage.6d44ccab.bundle.js",
   "CommentPage": "/js/CommentPage.b21ebb25.bundle.js",
   "ContactPage": "/js/ContactPage.e6567e49.bundle.js",
-  "CreateNewRecordPage": "/js/CreateNewRecordPage.d060eae1.bundle.js",
-  "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.4eea3f2f.bundle.js",
+  "CreateNewRecordPage": "/js/CreateNewRecordPage.a82573ac.bundle.js",
+  "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.a04ff059.bundle.js",
   "CreatorsPage": "/js/CreatorsPage.2ca85e4b.bundle.js",
-  "CubeAnalysisPage": "/js/CubeAnalysisPage.7cb63802.bundle.js",
-  "CubeBlogPage": "/js/CubeBlogPage.b837aa39.bundle.js",
-  "CubeComparePage": "/js/CubeComparePage.5ebc7d0c.bundle.js",
-  "CubeDeckPage": "/js/CubeDeckPage.47bbe0e8.bundle.js",
-  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.bdfd99c4.bundle.js",
-  "CubeDraftPage": "/js/CubeDraftPage.f804aa87.bundle.js",
-  "CubeHistoryPage": "/js/CubeHistoryPage.1fbaf687.bundle.js",
-  "CubeListPage": "/js/CubeListPage.60aa45a5.bundle.js",
-  "CubeOverviewPage": "/js/CubeOverviewPage.f1364d00.bundle.js",
-  "CubePlaytestPage": "/js/CubePlaytestPage.a7ce0c64.bundle.js",
-  "CubeRecordsPage": "/js/CubeRecordsPage.7460216b.bundle.js",
-  "CubeRestorePage": "/js/CubeRestorePage.704e3103.bundle.js",
-  "CubeSamplePackPage": "/js/CubeSamplePackPage.00d7a40c.bundle.js",
+  "CubeAboutPage": "/js/CubeAboutPage.7d1d0804.bundle.js",
+  "CubeAnalysisPage": "/js/CubeAnalysisPage.2db56be8.bundle.js",
+  "CubeBlogPage": "/js/CubeBlogPage.c61aa059.bundle.js",
+  "CubeComparePage": "/js/CubeComparePage.a157c3f4.bundle.js",
+  "CubeDeckPage": "/js/CubeDeckPage.528cf197.bundle.js",
+  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.7a1e3913.bundle.js",
+  "CubeDraftPage": "/js/CubeDraftPage.51f40083.bundle.js",
+  "CubeHistoryPage": "/js/CubeHistoryPage.b4da961e.bundle.js",
+  "CubeListPage": "/js/CubeListPage.0fa9a62f.bundle.js",
+  "CubeOverviewPage": "/js/CubeOverviewPage.fc60bd23.bundle.js",
+  "CubePlaytestPage": "/js/CubePlaytestPage.1d1d3777.bundle.js",
+  "CubeRecordsPage": "/js/CubeRecordsPage.6f905ee9.bundle.js",
+  "CubeRestorePage": "/js/CubeRestorePage.6f058cf8.bundle.js",
+  "CubeSamplePackPage": "/js/CubeSamplePackPage.3ff28a47.bundle.js",
   "DailyP1P1HistoryPage": "/js/DailyP1P1HistoryPage.915e8553.bundle.js",
   "DashboardPage": "/js/DashboardPage.aaac356c.bundle.js",
   "DevBlog": "/js/DevBlog.7ea98f02.bundle.js",
@@ -41,7 +42,7 @@
   "FeaturedCubesQueuePage": "/js/FeaturedCubesQueuePage.4d9359fe.bundle.js",
   "FeaturedQueuePage": "/js/FeaturedQueuePage.a364c5c6.bundle.js",
   "FiltersPage": "/js/FiltersPage.fbe75c8a.bundle.js",
-  "GridDraftPage": "/js/GridDraftPage.6139f045.bundle.js",
+  "GridDraftPage": "/js/GridDraftPage.ffaa2d25.bundle.js",
   "ImportRecordPage": "/js/ImportRecordPage.ea357741.bundle.js",
   "InfoPage": "/js/InfoPage.2ee6f318.bundle.js",
   "LandingPage": "/js/LandingPage.1ffa5a23.bundle.js",
@@ -52,20 +53,20 @@
   "MerchandisePage": "/js/MerchandisePage.7c8664dd.bundle.js",
   "NoticePage": "/js/NoticePage.b2e5132e.bundle.js",
   "NotificationsPage": "/js/NotificationsPage.50dd9511.bundle.js",
-  "P1P1Page": "/js/P1P1Page.abab9970.bundle.js",
+  "P1P1Page": "/js/P1P1Page.1b2c52c4.bundle.js",
   "PackagePage": "/js/PackagePage.d930867f.bundle.js",
   "PackagesPage": "/js/PackagesPage.ccc0d568.bundle.js",
   "PasswordResetPage": "/js/PasswordResetPage.29751288.bundle.js",
   "PodcastEpisodePage": "/js/PodcastEpisodePage.cf56a653.bundle.js",
   "PodcastPage": "/js/PodcastPage.6d1f8efd.bundle.js",
   "PodcastsPage": "/js/PodcastsPage.4e353102.bundle.js",
-  "RecordPage": "/js/RecordPage.bdce4ef9.bundle.js",
-  "RecordUploadDeckPage": "/js/RecordUploadDeckPage.357a82d3.bundle.js",
+  "RecordPage": "/js/RecordPage.c8725bcd.bundle.js",
+  "RecordUploadDeckPage": "/js/RecordUploadDeckPage.5cdbb4f2.bundle.js",
   "RegisterPage": "/js/RegisterPage.74ac4f8d.bundle.js",
   "ReviewContentPage": "/js/ReviewContentPage.556afe85.bundle.js",
   "SearchPage": "/js/SearchPage.87a6f35b.bundle.js",
   "TopCardsPage": "/js/TopCardsPage.8b7a1718.bundle.js",
-  "UserAccountPage": "/js/UserAccountPage.f9eac418.bundle.js",
+  "UserAccountPage": "/js/UserAccountPage.682b7b68.bundle.js",
   "UserBlogPage": "/js/UserBlogPage.ae0bcc48.bundle.js",
   "UserCubePage": "/js/UserCubePage.5146f8ba.bundle.js",
   "UserDecksPage": "/js/UserDecksPage.7ad758a5.bundle.js",
@@ -73,6 +74,6 @@
   "VersionPage": "/js/VersionPage.4a140648.bundle.js",
   "VideoPage": "/js/VideoPage.b041f1bf.bundle.js",
   "VideosPage": "/js/VideosPage.20352d97.bundle.js",
-  "commons": "/js/commons.b48e4c08.bundle.js",
-  "vendors": "/js/vendors.5dee13e4.bundle.js"
+  "commons": "/js/commons.8c35a28a.bundle.js",
+  "vendors": "/js/vendors.9ba30038.bundle.js"
 }
