--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -9,7 +9,7 @@
     "update-cards": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_cards.js",
     "update-combos": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_combos.js",
     "repair-cube-hashes": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/repairCubeHashes.js --",
-    "export-data": "node dist/jobs/src/export_data_wrapper.js",
+    "export-data": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/export_data_wrapper.js",
     "apply-migrations": "npm run init-data && NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/apply_scryfall_migrations.js",
     "dev:update-draft-history": "NODE_OPTIONS=--max_old_space_size=28672 ts-node -r tsconfig-paths/register --project tsconfig.json src/update_draft_history.ts",
     "dev:update-cube-history": "NODE_OPTIONS=--max_old_space_size=28672 ts-node -r tsconfig-paths/register --project tsconfig.json src/update_cube_history.ts",
