--- a/.github/workflows/build-daily-jobs-lambda.yml
+++ b/.github/workflows/build-daily-jobs-lambda.yml
@@ -17,6 +17,7 @@ permissions:
 
 jobs:
   build-daily-jobs-lambda:
+    if: github.repository == 'dekkerglen/CubeCobra'
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
