--- a/.github/workflows/coverage-comment.yml
+++ b/.github/workflows/coverage-comment.yml
@@ -14,6 +14,7 @@ jobs:
   comment:
     # Only run on pull requests and when the test job succeeded
     if: >
+      github.repository == 'dekkerglen/CubeCobra' &&
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
