split off metadata and combo into separate task

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -5,7 +5,7 @@
     "init-data": "node dist/jobs/src/init-data.js",
     "update-draft-history": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_draft_history.js",
     "update-cube-history": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_cube_history.js",
-    "update-metadata-dict": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_metadata_dict.js",
+    "update-metadata-dict": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_metadata_dict.js && NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_combos.js",
     "update-cards": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_cards.js",
     "update-combos": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/update_combos.js",
     "repair-cube-hashes": "NODE_OPTIONS=--max_old_space_size=28672 node dist/jobs/src/repairCubeHashes.js --",
@@ -20,7 +20,7 @@
     "dev:update-cards": "NODE_OPTIONS=--max_old_space_size=28672 ts-node -r tsconfig-paths/register --project tsconfig.json src/update_cards.ts",
     "dev:update-combos": "NODE_OPTIONS=--max_old_space_size=28672 ts-node -r tsconfig-paths/register --project tsconfig.json src/update_combos.ts",
     "dev:repair-cube-hashes": "NODE_OPTIONS=--max_old_space_size=28672 ts-node -r tsconfig-paths/register --project tsconfig.json src/repairCubeHashes.ts --",
-    "update-all": "npm run init-data && npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards && npm run update-combos",
+    "update-all": "npm run init-data && npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards",
     "fix-external-paths": "npx resolve-tspaths --out dist && node scripts/fixExternalPaths.js",
     "build": "npx tsc && npm run fix-external-paths",
     "clean": "rm -rf dist/ node_modules/",
