Switch to nodenext so that ES modules can be imported, such as remark ones.

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -16,8 +16,8 @@
       "dynamo/*": ["src/dynamo/*"],
       "types/*": ["src/types/*"]
     },
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
