Add markdown packages to server so we can convert markdown to text.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -59,8 +59,14 @@
     "forever-monitor": "^3.0.3",
     "joi": "^18.0.1",
     "lodash": "^4.17.21",
+    "mdast-util-to-string": "^4.0.0",
     "module-alias": "^2.2.3",
     "nearley": "^2.20.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "unified": "^11.0.5",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
