--- a/packages/server/public/manifest.json
+++ b/packages/server/public/manifest.json
@@ -30,7 +30,7 @@
   "CubeRestorePage": "/js/CubeRestorePage.8118ceaa.bundle.js",
   "CubeSamplePackPage": "/js/CubeSamplePackPage.4f668463.bundle.js",
   "DailyP1P1HistoryPage": "/js/DailyP1P1HistoryPage.7665783f.bundle.js",
-  "DashboardPage": "/js/DashboardPage.221e88dd.bundle.js",
+  "DashboardPage": "/js/DashboardPage.9d581aec.bundle.js",
   "DevBlog": "/js/DevBlog.839a602e.bundle.js",
   "DonatePage": "/js/DonatePage.931a03ae.bundle.js",
   "DownTimePage": "/js/DownTimePage.ad213952.bundle.js",
@@ -38,14 +38,14 @@
   "EditPodcastPage": "/js/EditPodcastPage.30a3bd87.bundle.js",
   "EditVideoPage": "/js/EditVideoPage.8057d9b0.bundle.js",
   "ErrorPage": "/js/ErrorPage.6f415002.bundle.js",
-  "ExplorePage": "/js/ExplorePage.cfc2c65c.bundle.js",
+  "ExplorePage": "/js/ExplorePage.6890efde.bundle.js",
   "FeaturedCubesQueuePage": "/js/FeaturedCubesQueuePage.af9cc386.bundle.js",
   "FeaturedQueuePage": "/js/FeaturedQueuePage.21345bca.bundle.js",
   "FiltersPage": "/js/FiltersPage.fa2e44b4.bundle.js",
   "GridDraftPage": "/js/GridDraftPage.463818e9.bundle.js",
   "ImportRecordPage": "/js/ImportRecordPage.102863ea.bundle.js",
   "InfoPage": "/js/InfoPage.88afe4ba.bundle.js",
-  "LandingPage": "/js/LandingPage.5f5af182.bundle.js",
+  "LandingPage": "/js/LandingPage.5922074c.bundle.js",
   "LeaveWarningPage": "/js/LeaveWarningPage.75750a13.bundle.js",
   "LoginPage": "/js/LoginPage.d3a2a7bd.bundle.js",
   "LostPasswordPage": "/js/LostPasswordPage.7f20d5e8.bundle.js",
@@ -60,11 +60,12 @@
   "PodcastEpisodePage": "/js/PodcastEpisodePage.f7f398e7.bundle.js",
   "PodcastPage": "/js/PodcastPage.10748fd0.bundle.js",
   "PodcastsPage": "/js/PodcastsPage.b9cb578e.bundle.js",
+  "RecentDraftsPage": "/js/RecentDraftsPage.42d20f1d.bundle.js",
   "RecordPage": "/js/RecordPage.771599e0.bundle.js",
   "RecordUploadDeckPage": "/js/RecordUploadDeckPage.faa00228.bundle.js",
   "RegisterPage": "/js/RegisterPage.0d105e74.bundle.js",
   "ReviewContentPage": "/js/ReviewContentPage.cf28bb86.bundle.js",
-  "SearchPage": "/js/SearchPage.c4a89b8d.bundle.js",
+  "SearchPage": "/js/SearchPage.3cbb9b15.bundle.js",
   "TopCardsPage": "/js/TopCardsPage.292b56e5.bundle.js",
   "UserAccountPage": "/js/UserAccountPage.dddbc974.bundle.js",
   "UserBlogPage": "/js/UserBlogPage.0aa91e26.bundle.js",
@@ -74,6 +75,6 @@
   "VersionPage": "/js/VersionPage.f872489c.bundle.js",
   "VideoPage": "/js/VideoPage.25b4f3d4.bundle.js",
   "VideosPage": "/js/VideosPage.2eaf648a.bundle.js",
-  "commons": "/js/commons.a600ac56.bundle.js",
-  "vendors": "/js/vendors.792ff0a5.bundle.js"
+  "commons": "/js/commons.3074c3fc.bundle.js",
+  "vendors": "/js/vendors.994134bf.bundle.js"
 }
