--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -58,15 +58,11 @@
     "express-validator": "^7.3.0",
     "forever-monitor": "^3.0.3",
     "joi": "^18.0.1",
+    "load-esm": "^1.0.3",
     "lodash": "^4.17.21",
     "mdast-util-to-string": "^4.0.0",
     "module-alias": "^2.2.3",
     "nearley": "^2.20.1",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "remark-parse": "^11.0.0",
-    "unified": "^11.0.5",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
@@ -76,6 +72,10 @@
     "passport-local": "^1.0.0",
     "patreon": "^0.4.1",
     "pug": "^3.0.3",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "response-time": "^2.3.4",
     "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
@@ -87,6 +87,7 @@
     "stripe": "^18.4.0",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
+    "unified": "^11.0.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
