Fix custom sorts, migrate settings to settings page

--- a/packages/server/public/manifest.json
+++ b/packages/server/public/manifest.json
@@ -6,29 +6,30 @@
   "ArticlesPage": "/js/ArticlesPage.8f225208.bundle.js",
   "BlogPostPage": "/js/BlogPostPage.c84976f7.bundle.js",
   "BrowseContentPage": "/js/BrowseContentPage.835f8961.bundle.js",
-  "BulkUploadPage": "/js/BulkUploadPage.ed671f78.bundle.js",
+  "BulkUploadPage": "/js/BulkUploadPage.3a895374.bundle.js",
   "CardPage": "/js/CardPage.fb895628.bundle.js",
   "CardSearchPage": "/js/CardSearchPage.6c9c6421.bundle.js",
   "CardUpdatesPage": "/js/CardUpdatesPage.01eb881e.bundle.js",
   "CommentPage": "/js/CommentPage.7d3076a6.bundle.js",
   "ContactPage": "/js/ContactPage.de3bd65a.bundle.js",
-  "CreateNewRecordPage": "/js/CreateNewRecordPage.8444d926.bundle.js",
-  "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.35c34dcc.bundle.js",
+  "CreateNewRecordPage": "/js/CreateNewRecordPage.9ce3e134.bundle.js",
+  "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.11c9bee1.bundle.js",
   "CreatorsPage": "/js/CreatorsPage.39e91f9b.bundle.js",
-  "CubeAboutPage": "/js/CubeAboutPage.9bf6b8d6.bundle.js",
-  "CubeAnalysisPage": "/js/CubeAnalysisPage.a9e6b60a.bundle.js",
-  "CubeBlogPage": "/js/CubeBlogPage.f3da80a4.bundle.js",
-  "CubeComparePage": "/js/CubeComparePage.9e21fd72.bundle.js",
-  "CubeDeckPage": "/js/CubeDeckPage.4d0e7fdf.bundle.js",
-  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.49c9fb16.bundle.js",
-  "CubeDraftPage": "/js/CubeDraftPage.4189fe3e.bundle.js",
-  "CubeHistoryPage": "/js/CubeHistoryPage.0c99a2ac.bundle.js",
-  "CubeListPage": "/js/CubeListPage.6ad8f772.bundle.js",
-  "CubeOverviewPage": "/js/CubeOverviewPage.30752d0a.bundle.js",
-  "CubePlaytestPage": "/js/CubePlaytestPage.cec9eff0.bundle.js",
-  "CubeRecordsPage": "/js/CubeRecordsPage.50865d94.bundle.js",
-  "CubeRestorePage": "/js/CubeRestorePage.f4ce5fbc.bundle.js",
-  "CubeSamplePackPage": "/js/CubeSamplePackPage.49f2f648.bundle.js",
+  "CubeAboutPage": "/js/CubeAboutPage.5b4db077.bundle.js",
+  "CubeAnalysisPage": "/js/CubeAnalysisPage.259479e7.bundle.js",
+  "CubeBlogPage": "/js/CubeBlogPage.e923eb10.bundle.js",
+  "CubeComparePage": "/js/CubeComparePage.357eb8a9.bundle.js",
+  "CubeDeckPage": "/js/CubeDeckPage.9c3ea3cc.bundle.js",
+  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.57a2d594.bundle.js",
+  "CubeDraftPage": "/js/CubeDraftPage.bbbc5a14.bundle.js",
+  "CubeHistoryPage": "/js/CubeHistoryPage.7bf30681.bundle.js",
+  "CubeListPage": "/js/CubeListPage.1543669e.bundle.js",
+  "CubeOverviewPage": "/js/CubeOverviewPage.846bbe79.bundle.js",
+  "CubePlaytestPage": "/js/CubePlaytestPage.159b279d.bundle.js",
+  "CubeRecordsPage": "/js/CubeRecordsPage.0c237be4.bundle.js",
+  "CubeRestorePage": "/js/CubeRestorePage.6030f613.bundle.js",
+  "CubeSamplePackPage": "/js/CubeSamplePackPage.28ec7f07.bundle.js",
+  "CubeSettingsPage": "/js/CubeSettingsPage.917e3ab5.bundle.js",
   "DailyP1P1HistoryPage": "/js/DailyP1P1HistoryPage.7665783f.bundle.js",
   "DashboardPage": "/js/DashboardPage.9d581aec.bundle.js",
   "DevBlog": "/js/DevBlog.839a602e.bundle.js",
@@ -43,7 +44,7 @@
   "FeaturedCubesQueuePage": "/js/FeaturedCubesQueuePage.af9cc386.bundle.js",
   "FeaturedQueuePage": "/js/FeaturedQueuePage.21345bca.bundle.js",
   "FiltersPage": "/js/FiltersPage.fa2e44b4.bundle.js",
-  "GridDraftPage": "/js/GridDraftPage.5e780a7c.bundle.js",
+  "GridDraftPage": "/js/GridDraftPage.5146f5a1.bundle.js",
   "ImportRecordPage": "/js/ImportRecordPage.102863ea.bundle.js",
   "InfoPage": "/js/InfoPage.88afe4ba.bundle.js",
   "LandingPage": "/js/LandingPage.320e841e.bundle.js",
@@ -54,7 +55,7 @@
   "MerchandisePage": "/js/MerchandisePage.3efd77e4.bundle.js",
   "NoticePage": "/js/NoticePage.3674d319.bundle.js",
   "NotificationsPage": "/js/NotificationsPage.2ed86b93.bundle.js",
-  "P1P1Page": "/js/P1P1Page.ae948be3.bundle.js",
+  "P1P1Page": "/js/P1P1Page.61f5faee.bundle.js",
   "PackagePage": "/js/PackagePage.ddba961d.bundle.js",
   "PackagesPage": "/js/PackagesPage.f8fb400d.bundle.js",
   "PasswordResetPage": "/js/PasswordResetPage.387a426a.bundle.js",
@@ -62,8 +63,8 @@
   "PodcastPage": "/js/PodcastPage.10748fd0.bundle.js",
   "PodcastsPage": "/js/PodcastsPage.b9cb578e.bundle.js",
   "RecentDraftsPage": "/js/RecentDraftsPage.42d20f1d.bundle.js",
-  "RecordPage": "/js/RecordPage.cffdc81e.bundle.js",
-  "RecordUploadDeckPage": "/js/RecordUploadDeckPage.ca1b74a2.bundle.js",
+  "RecordPage": "/js/RecordPage.439fef5e.bundle.js",
+  "RecordUploadDeckPage": "/js/RecordUploadDeckPage.4f42ea51.bundle.js",
   "RegisterPage": "/js/RegisterPage.0d105e74.bundle.js",
   "ReviewContentPage": "/js/ReviewContentPage.cf28bb86.bundle.js",
   "SearchPage": "/js/SearchPage.3cbb9b15.bundle.js",
@@ -76,6 +77,6 @@
   "VersionPage": "/js/VersionPage.f872489c.bundle.js",
   "VideoPage": "/js/VideoPage.25b4f3d4.bundle.js",
   "VideosPage": "/js/VideosPage.2eaf648a.bundle.js",
-  "commons": "/js/commons.47c5f231.bundle.js",
-  "vendors": "/js/vendors.af649a7c.bundle.js"
+  "commons": "/js/commons.83dffd2b.bundle.js",
+  "vendors": "/js/vendors.5726344b.bundle.js"
 }
